deploy/PROD-REG/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: med-benefits
  annotations:
    field.cattle.io/projectId: c-tx8hv:p-7hpb9
